# jobnest

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  syncpack.config.json  tsconfig.json  turbo.json
.changeset/: README.md  brave-gifts-film.md  bright-carpets-hunt.md  calm-windows-open.md  clean-design-pass.md  clever-bears-jog.md  compact-sidebar-balance.md  config.json  cool-seals-fix.md  dashboard-donut-polish.md  download-proxy-endpoint.md  draggable-title-strip.md  eager-pandas-play.md  early-cheetahs-sneeze.md  eleven-insects-care.md  fair-icons-taste.md  fair-lamps-taste.md  fair-pears-wave.md  floppy-buckets-jam.md  form-field-feedback.md  funny-snakes-prove.md  gentle-walls-help.md  goofy-jokes-travel.md  green-pots-heal.md  green-toes-type.md  kanban-dnd-tracker.md  llm-txt-agent-import.md  lovely-clouds-deny.md  mobile-layout-tune.md  neat-buttons-align.md  onboarding-dialog.md  proud-ideas-share.md  quiet-buckets-smile.md  quiet-icons-glow.md  quiet-maps-bake.md  reports-feature.md  seo-metadata-improvements.md  six-knives-begin.md  slimy-loops-fetch.md  slow-webs-lay.md  (+14 more)
.github/workflows/: code-check.yml  release.yml
apps/jobnest/: .env.example  CHANGELOG.md  README.md  index.html  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/jobnest/mock/: mock-import-30-applications.json
apps/jobnest/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/jobnest/src-tauri/capabilities/: default.json
apps/jobnest/src-tauri/crates/jobnest-db/: Cargo.toml
apps/jobnest/src-tauri/crates/jobnest-db/src/: db.rs  lib.rs
apps/jobnest/src-tauri/icons/: icon.icns
apps/jobnest/src-tauri/migrations/: 0001_initial_schema.sql  0002_application_mvp_fields.sql  0003_app_settings.sql  0004_application_source.sql  0005_application_history.sql  0006_cleanup_backfilled_update_history.sql  0007_stale_application_days.sql
apps/jobnest/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
apps/jobnest/src-tauri/src/services/: applications.rs  mod.rs  settings.rs
apps/jobnest/src/app/: globals.css  layout.tsx  page.tsx
apps/jobnest/src/app/dashboard/: page.tsx
apps/jobnest/src/app/history/: page.tsx
apps/jobnest/src/app/reports/: page.tsx
apps/jobnest/src/app/settings/: page.tsx
apps/jobnest/src/components/: app-header.tsx  app-shell.tsx  application-tracker.tsx  content-card.tsx  history-toolbar.tsx  settings-screen.tsx  theme-provider.tsx  theme-toggle.tsx  update-notice.tsx  window-drag-surface.tsx
apps/jobnest/src/components/application-history/: history-screen.tsx
apps/jobnest/src/hooks/: use-form-dialog.ts  use-onboarding.ts  use-settings.ts
apps/jobnest/src/lib/: application-source.ts  date.ts  error-handler.ts  feedback.ts  form-mappers.ts  report-export.ts  salary.ts  settings.ts  stale-applications.test.ts  stale-applications.ts  status.ts  toast.ts
apps/jobnest/src/types/: tabler-icons-react.d.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  page.tsx
apps/web/src/components/: theme-toggle.tsx
apps/website/: CHANGELOG.md  next.config.ts  package.json  tsconfig.json
apps/website/public/: llm.txt
apps/website/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/src/components/: theme-toggle.tsx
apps/website/src/lib/: env.ts  site.ts
apps/website/src/types/: env.d.ts
scripts/: sync-jobnest-version.mjs
(+51 files in other folders)
