[package]
name = "jobnest"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "jobnest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jobnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.24", features = ["chrono", "function", "uuid"] }
specta-typescript = "0.0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "macros"] }
tauri-specta = { version = "2.0.0-rc.24", features = ["typescript"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "4.6.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
